<resources>
    <string name="app_name">MusicU</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Discover</string>
    <string name="title_myprofile">My Profile</string>
    <string name="title_messages"> Messages</string>
    <string name="title_user_profile"> Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
