<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.musicu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/to_tutorial"
            app:destination="@id/tutorialFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.musicu.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/userProfile"
            app:destination="@id/otherUser" />
        <action
            android:id="@+id/to_search_results"
            app:destination="@id/searchResults2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.musicu.ui.notifications.NotificationsFragment"
        android:label="@string/title_myprofile"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/message2"
        android:name="com.example.musicu.ui.user.message"
        android:label="@string/title_messages"
        tools:layout="@layout/message_fragment" />

    <fragment
        android:id="@+id/otherUser"
        android:name="com.example.musicu.ui.user.otherUser"
        android:label="@string/title_user_profile"
        tools:layout="@layout/other_user_fragment">
        <action
            android:id="@+id/openMessage"
            app:destination="@id/message2" />
    </fragment>

    <fragment
        android:id="@+id/tutorialFragment"
        android:name="com.example.musicu.ui.home.TutorialFragment"
        android:label="Tutorial"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/searchResults2"
        android:name="com.example.musicu.ui.dashboard.SearchResults"
        android:label="Search Results"
        tools:layout="@layout/fragment_search_results" />
</navigation>